src-tauri/build_log_utf8_2.txt
cargo :    Compiling 
vtc-tracker-desktop 
v1.0.0 (C:\Users\rich
s\Desktop\tracker\tra
cker-desktop\src-taur
i)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
UTF8 
build_log_utf8_2.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (   Comp   
 iling vt...ktop\    
src-tauri):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
import: `error`
 --> src\sync.rs:6:21
  |
6 | use 
tracing::{info, 
error, debug};
  |                  
   ^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
imports: `debug` and 
`error`
 --> 
src\telemetry.rs:7:21
  |
7 | use 
tracing::{info, 
debug, error};
  |                  
   ^^^^^  ^^^^^

warning: unused 
import: 
`FILE_MAP_ALL_ACCESS`
  --> src\telemetry.r
s:13:70
   |
13 |     
OpenFileMappingA, 
MapViewOfFile, 
UnmapViewOfFile, 
FILE_MAP_READ, 
FILE_MAP_ALL_ACCESS,
   |                 
                     
                     
           
^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `Manager`
 --> 
src\commands.rs:5:29
  |
5 | use 
tauri::{command, 
State, Manager, 
AppHandle, 
WebviewWindow};
  |                  
           ^^^^^^^

warning: unused 
import: `Deserialize`
 --> 
src\commands.rs:6:13
  |
6 | use 
serde::{Deserialize, 
Serialize};
  |             
^^^^^^^^^^^

error[E0308]: 
mismatched types
   --> src\telemetry.
rs:118:21
    |
117 |                
 let handle = 
OpenFileMappingA(
    |                
              
---------------- 
arguments to this 
function are 
incorrect
118 |                
     FILE_MAP_READ, 
// Read access
    |                
     ^^^^^^^^^^^^^ 
expected `u32`, 
found `FILE_MAP`
    |
note: function 
defined here
   --> C:\Users\richs
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\windows-0
.58.0\src\Windows\Win
32\System\Memory\mod.
rs:486:15
    |
486 | pub unsafe fn 
OpenFileMappingA<P0, 
P1>(dwdesiredaccess: 
u32, binherithandle: 
P0, lpname: P1) -> wi
ndows_core::Result<su
per::super::Founda...
    |               
^^^^^^^^^^^^^^^^

warning: unused 
variable: `header`
   --> src\telemetry.
rs:187:25
    |
187 |                
     let header = 
*header_ptr; // Copy 
header
    |                
         ^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_header`
    |
    = note: `#[warn(u
nused_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

For more information 
about this error, 
try `rustc --explain 
E0308`.
warning: `vtc-tracker
-desktop` (lib) 
generated 6 warnings
error: could not 
compile `vtc-tracker-
desktop` (lib) due 
to 1 previous error; 
6 warnings emitted
